2005-04-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/tkfbox.tcl (::tk::dialog::file::): fix typeMenuLab ref.
	Add undoc'd ::tk::dialog::file::showHiddenBtn var (default 0) that
	will add a "Show Hidden" checkbutton to tk_get*File and
	tk_chooseDirectory if set to true.
	* library/choosedir.tcl (::tk::dialog::file::chooseDir::): fix
	cancelBtn ref, add hiddenBtn ref for "Show Hidden" button.

2005-04-09  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/README: updated requirements for OS & developer tool
	versions + other small fixes/cleanup.

	* macosx/tkMacOSXEntry.c (ComputeIncDecParameters): manually define
	constants present only in 10.3 headers so that we can build on 10.2.

	* macosx/Wish.pbproj/project.pbxproj: fixed absolute path to 
	tkEntry.h that confused 10.2 PBX.
	
	* unix/tcl.m4 (Darwin): added -single_module linker flag to
	TCL_SHLIB_LD_EXTRAS and TK_SHLIB_LD_EXTRAS.
	* unix/configure: autoconf-2.59

2005-04-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	* unix/tkUnixWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	* win/tkWinWm.c (TkWmStackorderToplevelWrapperMap, TkWmStackorderToplevel):
	Fix panic in wm stackorder when a toplevel is created on another
	diplay. The code now ignores toplevels that have a display
	that does not match the display of the parent window.
	[Bug 1152809]

2005-04-06  Donal K. Fellows  <dkf@users.sf.net>

	* doc/wm.n, doc/winfo.n, doc/tk.n, doc/send.n, doc/selection.n: 
	* doc/radiobutton.n, doc/photo.n, doc/options.n, doc/menu.n: 
	* doc/listbox.n, doc/getOpenFile.n, doc/font.n, doc/event.n: 
	* doc/entry.n, doc/clipboard.n, doc/checkbutton.n, doc/canvas.n: 
	* doc/button.n, doc/bind.n, doc/TextLayout.3, doc/MeasureChar.3: 
	* doc/GetRelief.3, doc/GetPixels.3, doc/GetJustify.3, doc/GetFont.3: 
	* doc/GetCursor.3, doc/GetColor.3, doc/GetBitmap.3, doc/GetAnchor.3: 