@@ -1,3 +1,8 @@
+2005-04-14  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/tkUnixFont.c (FontMapLoadPage): reorder char[] decls to
+	avoid possible segv.  Minimal fix for [Bug 1122671]
+
 2005-04-12  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/tkfbox.tcl (::tk::dialog::file::): fix typeMenuLab ref.
